<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enabled"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/enable_notifications"
        android:textColor="#000000"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_tutorial"
        android:textSize="14sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_start"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11:00 Uhr" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/notification_end"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/buttonEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13:00 Uhr" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/textViewRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification_radius"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/buttonRadiusDecrease"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="-" />

        <Button
            android:id="@+id/buttonRadiusIncrease"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="+" />

    </LinearLayout>


    <fragment
        android:id="@+id/mapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

</LinearLayout>